--- a/MVVM/MainWindow.xaml
+++ b/MVVM/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM"
         mc:Ignorable="d"
-        Title="Анкета" Height="500" Width="800">
+        Title ="{Binding Name}"
+        d:DataContext="{d:DesignInstance local:ViewModel}"
+       Icon="pack://application:,,,/Icon/Icon1.ico" Height="500" Width="800">
     <Window.Resources>
         <Style x:Key="MyCustomButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="LightGray"/>
@@ -30,15 +32,19 @@
                
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="red"/>
-                    <Setter Property="Foreground" Value="Black"/>
+                    <!--<Setter Property="Foreground" Value="Black"/>-->
                 </Trigger>
             </Style.Triggers>
 
             
 
         </Style>
+        <Style  x:Key="Post">
+            
+            
+        </Style>
     </Window.Resources>
-    <Grid Name="All" >
+    <Grid Name="All"  >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="110"/>
             <ColumnDefinition Width="Auto"/>
@@ -55,11 +61,18 @@
 
 
         </Grid.RowDefinitions>
+        <Button Grid.Column="2"  Grid.Row="4" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10" VerticalAlignment="Top"  FontWeight="Medium"   HorizontalAlignment="Right"  Command="{Binding SaveCommand}" />
+
         <Label Grid.Column="0" Grid.Row="0"  Content="Імена" FontSize="15" FontWeight="Bold" HorizontalAlignment="Center"  VerticalAlignment="Top"/>
 
-        <ListBox  Grid.Column="0" Grid.Row="3"  Name="NameL"   DisplayMemberPath="Name"  Margin="0,25  " >
+        <ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding Persons}"  SelectedItem="{Binding SelectedPerson}"   Margin="0,25  " >
+            <!--Name="NameL"   DisplayMemberPath="Name"-->
             <!--SelectionChanged="NameL_SelectionChanged"-->
-
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock FontSize="18" Text="{Binding Name}" /> <!--SelectedItem="{Binding SelectedPerson}"-->
+                </DataTemplate>
+            </ListBox.ItemTemplate>
         </ListBox>
 
         <Button  Grid.Column="0" Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource MyCustomButtonStyle}" />
@@ -67,15 +80,15 @@
         <Button  Grid.Column="0" Grid.Row="2" Name="Clear" Content="Чистити"  Style="{StaticResource MyCustomButtonStyle}" />
         <Button  Grid.Column="0" Grid.Row="3" Name="Delete" Content="Видалити"  Style="{StaticResource MyCustomButtonStyle}" />
 
-        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility ="Visible">
+        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility ="Visible"     >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="115" />
                 <ColumnDefinition Width="115"/>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+                
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
@@ -101,21 +114,27 @@
             <Label Grid.Column="2" Grid.Row="5"  Content="Відпустка:" FontSize="15" FontWeight="Bold" Margin="0,0,10,10"  VerticalAlignment="Top" />
 
 
-            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox"  Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
+            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox" Text="{Binding SelectedPerson.Name}" Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
 
-            <TextBox  Grid.Column="3" Grid.Row="3" Name="AgeBox" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" /> 
+            <TextBox  Grid.Column="3" Grid.Row="3" Name="AgeBox" Text="{Binding SelectedPerson.Age}" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" /> <!--,UpdateSourceTrigger=PropertyChanged-->
             <!--ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:PostEnum}}}"
                ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:EnumWikend}}}" -->
 
 
-            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30" IsReadOnly="True"/>
+            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30"   IsReadOnly="True" >
+                <ComboBoxItem Content="Стажер"/>
+                <ComboBoxItem Content="Директор"/>
+                <ComboBoxItem Content="Менеджер"/>
+                <ComboBoxItem Content="Програміст"/>
+                <ComboBoxItem Content="Бухгалтер"/>
+                <ComboBoxItem Content="Стажер"/>
+            </ComboBox>
             <ComboBox Grid.Column="3" Grid.Row="5" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10"  Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
       
             <Button Grid.Column="0"  Grid.Row="4" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"     />
 
 
-            <Button Grid.Column="5"  Grid.Row="6" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10" VerticalAlignment="Top"  FontWeight="Medium"   HorizontalAlignment="Center"/>
-            <Button Grid.Column="4"  Grid.Row="6" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10" VerticalAlignment="Top"   FontWeight="Medium"   HorizontalAlignment="Center"/>
+              <Button Grid.Column="4"  Grid.Row="6" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10" VerticalAlignment="Top"   FontWeight="Medium"   HorizontalAlignment="Center"/>
         </Grid>
         
 
