--- a/MVVM/MainWindow.xaml
+++ b/MVVM/MainWindow.xaml
@@ -5,49 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM"
         mc:Ignorable="d"
-        Title ="{Binding Name}"
-        d:DataContext="{d:DesignInstance local:ViewModel}"
-       Icon="pack://application:,,,/Icon/Icon1.ico" Height="500" Width="800">
+        
+       Icon="pack://application:,,,/Icon/Icon1.ico"  Title ="Анкета" Height="500" Width="800">
     <Window.Resources>
-        <Style x:Key="MyCustomButtonStyle" TargetType="Button">
-            <Setter Property="Background" Value="LightGray"/>
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Width" Value="90"/> <!--Width="90" Height="20"    FontWeight="Medium" VerticalAlignment="Top" HorizontalAlignment="Center" />-->
-            <Setter Property="FontWeight" Value="Medium"/>
-            <Setter Property="Height" Value="20"/>
-            <Setter Property="VerticalAlignment" Value="Top"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border Background="{TemplateBinding Background}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-
-
-            <Style.Triggers>
-               
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="red"/>
-                    <!--<Setter Property="Foreground" Value="Black"/>-->
-                </Trigger>
-            </Style.Triggers>
-
-            
-
-        </Style>
-        <Style  x:Key="Post">
-            
-            
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/StyleButton.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
     </Window.Resources>
     <Grid Name="All"  >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="110"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -61,7 +32,6 @@
 
 
         </Grid.RowDefinitions>
-        <Button Grid.Column="2"  Grid.Row="4" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10" VerticalAlignment="Top"  FontWeight="Medium"   HorizontalAlignment="Right"  Command="{Binding SaveCommand}" />
 
         <Label Grid.Column="0" Grid.Row="0"  Content="Імена" FontSize="15" FontWeight="Bold" HorizontalAlignment="Center"  VerticalAlignment="Top"/>
 
@@ -70,43 +40,45 @@
             <!--SelectionChanged="NameL_SelectionChanged"-->
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock FontSize="18" Text="{Binding Name}" /> <!--SelectedItem="{Binding SelectedPerson}"-->
+                    <TextBlock FontSize="18" Text="{Binding Name,UpdateSourceTrigger=PropertyChanged}" />
+                    <!--SelectedItem="{Binding SelectedPerson}"-->
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button  Grid.Column="0" Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource MyCustomButtonStyle}" />
+        <Button  Grid.Column="0" Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource ButtonStyle}" />
         <!--Click="Add_Click"-->
-        <Button  Grid.Column="0" Grid.Row="2" Name="Clear" Content="Чистити"  Style="{StaticResource MyCustomButtonStyle}" />
-        <Button  Grid.Column="0" Grid.Row="3" Name="Delete" Content="Видалити"  Style="{StaticResource MyCustomButtonStyle}" />
+        <Button  Grid.Column="0" Grid.Row="2" Name="Clear" Content="Чистити"  Style="{StaticResource ButtonStyle}" />
+        <Button  Grid.Column="0" Grid.Row="3" Name="Delete" Content="Видалити"  Style="{StaticResource ButtonStyle}" />
 
         <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility ="Visible"     >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="115" />
-                <ColumnDefinition Width="115"/>
+                <ColumnDefinition Width="230" />
+
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-               
-                <RowDefinition Height="*"/>
+
+
 
             </Grid.RowDefinitions>
 
 
 
 
-            <Image Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Grid.RowSpan="3" Name="Img"   Width="200" Height="200"  VerticalAlignment="Top" Margin="0,5,0,0"/>
+            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Name="Img"   Width="200" Height="200"  VerticalAlignment="Top" Margin="0,5,0,0"/>
 
             <Label Grid.Column="2" Grid.Row="2"  Content="Ім'я:" FontSize="15" FontWeight="Bold"  Margin="0,5,10,10" VerticalAlignment="Top" />
             <Label Grid.Column="2" Grid.Row="3"  Content="Вік:" FontSize="15" FontWeight="Bold" Margin="0,5,10,10" VerticalAlignment="Top" />
@@ -114,34 +86,36 @@
             <Label Grid.Column="2" Grid.Row="5"  Content="Відпустка:" FontSize="15" FontWeight="Bold" Margin="0,0,10,10"  VerticalAlignment="Top" />
 
 
-            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox" Text="{Binding SelectedPerson.Name}" Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
+            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox" Text="{Binding Names, UpdateSourceTrigger=PropertyChanged}"  Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
 
-            <TextBox  Grid.Column="3" Grid.Row="3" Name="AgeBox" Text="{Binding SelectedPerson.Age}" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" /> <!--,UpdateSourceTrigger=PropertyChanged-->
+            <TextBox  Grid.Column="3" Grid.Row="3" Name="AgeBox" Text="{Binding Age}" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" />
+            <!--,UpdateSourceTrigger=PropertyChanged-->
             <!--ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:PostEnum}}}"
                ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:EnumWikend}}}" -->
 
 
-            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30"   IsReadOnly="True" >
-                <ComboBoxItem Content="Стажер"/>
+            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumPost}}, UpdateSourceTrigger=PropertyChanged}"  IsReadOnly="True" >
+                <!--<ComboBoxItem Content="Стажер"/>
                 <ComboBoxItem Content="Директор"/>
                 <ComboBoxItem Content="Менеджер"/>
                 <ComboBoxItem Content="Програміст"/>
                 <ComboBoxItem Content="Бухгалтер"/>
-                <ComboBoxItem Content="Стажер"/>
+                <ComboBoxItem Content="Стажер"/>-->
             </ComboBox>
             <ComboBox Grid.Column="3" Grid.Row="5" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10"  Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
-      
-            <Button Grid.Column="0"  Grid.Row="4" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"     />
+
+            <Button Grid.Column="0"  Grid.Row="2" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"     />
 
 
-              <Button Grid.Column="4"  Grid.Row="6" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10" VerticalAlignment="Top"   FontWeight="Medium"   HorizontalAlignment="Center"/>
+            <Button Grid.Column="4" Grid.Row="0" Grid.RowSpan="7" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10,20,130,30" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"  />
+            <Button Grid.Column="4"  Grid.Row="0" Grid.RowSpan="7" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10,10,10,30"  FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"   Command="{Binding SaveCommand}" />
+
         </Grid>
-        
+
 
         <Button  Grid.Column="0" Grid.Row="4" Name="Save" Content="Зберегти Файл" Width="100" Height="30"  Background="Green"  VerticalAlignment="Top" />
-             <Button Grid.Column="0" Grid.Row="5"  Name="OpenTxT" Content="Відкрити файл" Width="100" Height="30"  Background="SkyBlue"  FontWeight="Medium" VerticalAlignment="Top" />
+        <Button Grid.Column="0" Grid.Row="5"  Name="OpenTxT" Content="Відкрити файл" Width="100" Height="30"  Background="SkyBlue"  FontWeight="Medium" VerticalAlignment="Top" />
         <!--Click="Save_Click" Click="OpenJson_Click"    Click="SaveEdit_Click"   Click="CensleEdit_Click"    Click="EditPhoto_Click"-->
-
 
 
     </Grid>
