--- a/MVVM/MainWindow.xaml
+++ b/MVVM/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVM"
         mc:Ignorable="d"
-        
+        d:DataContext="{local:MainViewModel}"
        Icon="pack://application:,,,/Icon/Icon1.ico"  Title ="Анкета" Height="500" Width="800">
     <Window.Resources>
         <ResourceDictionary>
@@ -13,12 +13,13 @@
                 <ResourceDictionary Source="Styles/StyleButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-        
+
     </Window.Resources>
     <Grid Name="All"  >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="110"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="124*"/>
+            <ColumnDefinition Width="221*"/>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -33,25 +34,22 @@
 
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="0"  Content="Імена" FontSize="15" FontWeight="Bold" HorizontalAlignment="Center"  VerticalAlignment="Top"/>
-
-        <ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding Persons}"  SelectedItem="{Binding SelectedPerson}"   Margin="0,25  " >
-            <!--Name="NameL"   DisplayMemberPath="Name"-->
-            <!--SelectionChanged="NameL_SelectionChanged"-->
+        <Label  Content="Імена" FontSize="15" FontWeight="Bold" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
+        <ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding Persons}"  SelectedItem="{Binding SelectedPerson}"   Margin="0,25,0,25" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock FontSize="18" Text="{Binding Name,UpdateSourceTrigger=PropertyChanged}" />
-                    <!--SelectedItem="{Binding SelectedPerson}"-->
+                    <TextBlock FontSize="18" Text="{Binding PersonName,UpdateSourceTrigger=PropertyChanged}" />
+                  
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Button  Grid.Column="0" Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource ButtonStyle}" />
-        <!--Click="Add_Click"-->
-        <Button  Grid.Column="0" Grid.Row="2" Name="Clear" Content="Чистити"  Style="{StaticResource ButtonStyle}" />
-        <Button  Grid.Column="0" Grid.Row="3" Name="Delete" Content="Видалити"  Style="{StaticResource ButtonStyle}" />
+        <Button Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource ButtonStyle}" Command="{Binding AddCommand}"  />
+    
+        <Button Grid.Row="3" Name="Clear" Content="Очистити все"  Style="{StaticResource ButtonStyle}" Command="{Binding ClearAllCommand}"/>
+        <Button Grid.Row="2" Name="Delete" Content="Видалити"  Style="{StaticResource ButtonStyle}" Command="{Binding DeleteCommand}" />
 
-        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility ="Visible"     >
+        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility ="{Binding VisibilityConvert, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2"     >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="230" />
 
@@ -78,7 +76,7 @@
 
 
 
-            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Name="Img"   Width="200" Height="200"  VerticalAlignment="Top" Margin="0,5,0,0"/>
+            <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Name="Img" Source="{Binding PhotoProf, UpdateSourceTrigger=PropertyChanged}"  Width="200" Height="200"  VerticalAlignment="Top" Margin="0,5,0,0"/>
 
             <Label Grid.Column="2" Grid.Row="2"  Content="Ім'я:" FontSize="15" FontWeight="Bold"  Margin="0,5,10,10" VerticalAlignment="Top" />
             <Label Grid.Column="2" Grid.Row="3"  Content="Вік:" FontSize="15" FontWeight="Bold" Margin="0,5,10,10" VerticalAlignment="Top" />
@@ -86,37 +84,20 @@
             <Label Grid.Column="2" Grid.Row="5"  Content="Відпустка:" FontSize="15" FontWeight="Bold" Margin="0,0,10,10"  VerticalAlignment="Top" />
 
 
-            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox" Text="{Binding Names, UpdateSourceTrigger=PropertyChanged}"  Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
-
+            <TextBox  Grid.Column="3" Grid.Row="2" Name="NameBox" Text="{Binding Names }"  Width="100" Height="30" Margin="0,0,10,10" FontSize="15" />
             <TextBox  Grid.Column="3" Grid.Row="3" Name="AgeBox" Text="{Binding Age}" Width="100" Height="30" Margin="0,0,10,10"  FontSize="15" />
-            <!--,UpdateSourceTrigger=PropertyChanged-->
-            <!--ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:PostEnum}}}"
-               ItemsSource="{Binding Source={local:EnumBindingSource {x:Type local:EnumWikend}}}" -->
 
 
-            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumPost}}, UpdateSourceTrigger=PropertyChanged}"  IsReadOnly="True" >
-                <!--<ComboBoxItem Content="Стажер"/>
-                <ComboBoxItem Content="Директор"/>
-                <ComboBoxItem Content="Менеджер"/>
-                <ComboBoxItem Content="Програміст"/>
-                <ComboBoxItem Content="Бухгалтер"/>
-                <ComboBoxItem Content="Стажер"/>-->
-            </ComboBox>
-            <ComboBox Grid.Column="3" Grid.Row="5" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10"  Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
+            <ComboBox Grid.Column="3" Grid.Row="4" Name="PostBox" Width="auto" Margin="0,0,10,10" Height="30" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumPost}}, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding Post}" IsReadOnly="True" />
+            <ComboBox Grid.Column="3" Grid.Row="5" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumWeekend}}, UpdateSourceTrigger=PropertyChanged}"   SelectedItem="{Binding Weekend}" Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
 
-            <Button Grid.Column="0"  Grid.Row="2" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"     />
-
-
-            <Button Grid.Column="4" Grid.Row="0" Grid.RowSpan="7" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10,20,130,30" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"  />
+            <Button Grid.Column="0"  Grid.Row="2" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"   Command="{Binding UpdetePhotoProf}"  />
+            <Button Grid.Column="4" Grid.Row="0" Grid.RowSpan="7" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10,20,130,30" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"  Command="{Binding CanselCommand}" />
             <Button Grid.Column="4"  Grid.Row="0" Grid.RowSpan="7" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10,10,10,30"  FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"   Command="{Binding SaveCommand}" />
 
         </Grid>
-
-
-        <Button  Grid.Column="0" Grid.Row="4" Name="Save" Content="Зберегти Файл" Width="100" Height="30"  Background="Green"  VerticalAlignment="Top" />
-        <Button Grid.Column="0" Grid.Row="5"  Name="OpenTxT" Content="Відкрити файл" Width="100" Height="30"  Background="SkyBlue"  FontWeight="Medium" VerticalAlignment="Top" />
-        <!--Click="Save_Click" Click="OpenJson_Click"    Click="SaveEdit_Click"   Click="CensleEdit_Click"    Click="EditPhoto_Click"-->
-
-
+        <Button  Grid.Column="0" Grid.Row="4" Name="Save" Content="Зберегти Файл" Width="100" Height="30"  Background="Green" FontWeight="Medium" VerticalAlignment="Top" Command="{Binding SaveJsonCommand}"/>
+        <Button Grid.Column="0" Grid.Row="4"  Name="OpenTxT" Content="Відкрити файл" Width="100" Height="30"  Background="SkyBlue"  FontWeight="Medium" VerticalAlignment="Top"  Command="{Binding OpenJsonCommand}" Margin="5,40,5,0" Grid.RowSpan="2"/>
+      
     </Grid>
 </Window>
