--- a/MVVM/Styles/StyleButton.xaml
+++ b/MVVM/Styles/StyleButton.xaml
@@ -9,6 +9,8 @@
         <Setter Property="Height" Value="20"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontSize" Value="12"/> 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
