--- a/MVVM/MainWindow.xaml
+++ b/MVVM/MainWindow.xaml
@@ -9,7 +9,8 @@
         
         d:DataContext="{local:MainViewModel}"
         
-       Icon="pack://application:,,,/Icon/Icon1.ico"  Title ="Анкета" Height="500" Width="800">
+       Icon="pack://application:,,,/Icon/Icon1.ico"  Title ="Анкета" Height="500" Width="850">
+    
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,14 +18,15 @@
             </ResourceDictionary.MergedDictionaries>
             
                 <local:VisibilityConvert x:Key="VisibilityConvert"/>
-            
+                <local:EnableButtonConvert x:Key="EnableButtonConvert"/>
 
         </ResourceDictionary>
   
     </Window.Resources>
+    
     <Grid Name="All"  >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="110"/>
+            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="124*"/>
             <ColumnDefinition Width="221*"/>
 
@@ -42,29 +44,64 @@
         </Grid.RowDefinitions>
 
         <Label  Content="Імена" FontSize="15" FontWeight="Bold" HorizontalAlignment="Center"  VerticalAlignment="Center"/>
-        <ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding Persons}"  SelectedItem="{Binding SelectedPerson}"   Margin="0,25,0,25" >
+        <TextBox Grid.Row="3" Text="{Binding Pattern, UpdateSourceTrigger=PropertyChanged}" Width="140" Height="25" Margin="0,0,0,0" FontSize="15"    HorizontalAlignment="Center" VerticalAlignment="Top" BorderBrush="Black"    Background ="AliceBlue" />
+
+        <ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding SearchList}"  SelectedItem="{Binding SelectedPerson}"     Margin="0,25,0,25" >
             <ListBox.ItemTemplate>
+                
                 <DataTemplate>
-                    <TextBlock FontSize="18" Text="{Binding PersonName,UpdateSourceTrigger=PropertyChanged}" />
-                  
+                    
+                    <TextBlock >
+                         
+                        <Run Text="{Binding PersonName,UpdateSourceTrigger=PropertyChanged}" FontSize="18"/> 
+                        <Button Content="X" Width="20" Height="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="15,0,0,0"   Command="{Binding DeleteCommand}"    />  <LineBreak/>  <!-- Style="{StaticResource ButtonStyle}"  IsEnabled="{Binding EnableButtonClear,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}"-->
+                        <Run Text="Вік: " FontSize="10"/>
+                        <Run Text="{Binding Age}" FontSize="10"/>
+                        <Run Text="Посада: " FontSize="10"/>
+                        <Run Text="{Binding Post,  UpdateSourceTrigger=PropertyChanged}"  FontSize="10"/>
+                      
+                    </TextBlock>
+                   
+                    <!--CommandParameter="{Binding}"     Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType=ListBox}}-->
                 </DataTemplate>
+               
             </ListBox.ItemTemplate>
+            
         </ListBox>
+        <!--<ListBox  Grid.Column="0" Grid.Row="3" ItemsSource="{Binding SearchList}"  SelectedItem="{Binding SelectedPerson}"   Visibility="{Binding VisibilityList, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibilityConvert}}"   Margin="0,25,0,25" >
+            <ListBox.ItemTemplate>
 
+                <DataTemplate>
+
+                    <TextBlock >
+                  
+                 <Run Text="{Binding PersonName,UpdateSourceTrigger=PropertyChanged}" FontSize="18"/> <Button Content="X" Width="20" Height="20" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="15,0,0,0"   Command="{Binding DeleteCommand}"    />  <LineBreak/>  --><!-- Style="{StaticResource ButtonStyle}"  IsEnabled="{Binding EnableButtonClear,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}"--><!--
+                 <Run Text="Вік: " FontSize="10"/>
+                 <Run Text="{Binding Age}" FontSize="10"/>
+                 <Run Text="Посада: " FontSize="10"/>
+                 <Run Text="{Binding Post,  UpdateSourceTrigger=PropertyChanged}"  FontSize="10"/>
+
+                    </TextBlock>
+
+                    --><!--CommandParameter="{Binding}"     Command="{Binding DataContext.DeleteCommand, RelativeSource={RelativeSource AncestorType=ListBox}}--><!--
+                </DataTemplate>
+
+            </ListBox.ItemTemplate>
+
+        </ListBox>-->
         <Button Grid.Row="1" Name="Add" Content="Додати"  Style="{StaticResource ButtonStyle}" Command="{Binding AddCommand}"  />
-    
-        <Button Grid.Row="3" Name="Clear" Content="Очистити все"  Style="{StaticResource ButtonStyle}" Command="{Binding ClearAllCommand}"/>
-        <Button Grid.Row="2" Name="Delete" Content="Видалити"  Style="{StaticResource ButtonStyle}" Command="{Binding DeleteCommand}" />
 
-        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility="{Binding VisibilityConverts, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibilityConvert}}"
-              Grid.ColumnSpan="2"     >
+        <Button Grid.Row="2" Name="Clear" Content="Очистити все"  Style="{StaticResource ButtonStyle}" Command="{Binding ClearAllCommand}" IsEnabled="{Binding EnableButtonClear,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}" />
+        <!--<Button Grid.Row="3" Name="Delete" Content="Видалити"  Style="{StaticResource ButtonStyle}" Command="{Binding DeleteCommand}" IsEnabled="{Binding EnableButtonClear,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}" />-->
+
+        <Grid Name="Info" Grid.Column="1" Grid.Row="0" Grid.RowSpan="6" Visibility="{Binding VisibilityConverts, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibilityConvert}}"  Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="230" />
 
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
 
             </Grid.ColumnDefinitions>
 
@@ -100,11 +137,21 @@
             <ComboBox Grid.Column="3" Grid.Row="5" Name="WikendBox"  Width="auto" MaxWidth="150" Margin="0,0,10,10" ItemsSource="{Binding Source={local:ConvertEnum {x:Type local:EnumWeekend}}, UpdateSourceTrigger=PropertyChanged}"   SelectedItem="{Binding Weekend}" Height="30" IsReadOnly="True" VerticalAlignment="Top"/>
 
             <Button Grid.Column="0"  Grid.Row="2" Name="EditPhoto" Content="Змінити Фото" Width=" 100 " Height=" 30" Margin="5"   FontWeight="Medium"   Command="{Binding UpdetePhotoProf}"  />
-            <Button Grid.Column="4" Grid.Row="0" Grid.RowSpan="7" Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10,20,130,30" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"  Command="{Binding CanselCommand}" />
-            <Button Grid.Column="4"  Grid.Row="0" Grid.RowSpan="7" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10,10,10,30"  FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"   Command="{Binding SaveCommand}" />
-
+            <Grid Grid.Row="0" Grid.Column="4" Grid.RowSpan="7">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" MinWidth="120"/>
+                    <ColumnDefinition Width="auto"/>
+                    
+                </Grid.ColumnDefinitions>
+                <Button Grid.Column="0" Grid.Row="0"  Name="Cansel" Content="Відміна змін" Width="100" Height="30" Margin="10,20" FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"  Command="{Binding CanselCommand}" />
+            <Button Grid.Column="1"  Grid.Row="0" Name="SaveEdit" Content="Зберегти зміни" Width="100" Height="30"  Margin="10,20"  FontWeight="Medium" VerticalAlignment="Bottom" HorizontalAlignment="Right"   Command="{Binding SaveCommand}" />
+            </Grid>
         </Grid>
-        <Button  Grid.Column="0" Grid.Row="4" Name="Save" Content="Зберегти Файл" Width="100" Height="30"  Background="Green" FontWeight="Medium" VerticalAlignment="Top" Command="{Binding SaveJsonCommand}"   IsEnabled="{Binding EnableButton}"/>
+        <Button  Grid.Column="0" Grid.Row="4" Name="Save" Content="Зберегти Файл" Width="100" Height="30"  Background="Green" FontWeight="Medium" VerticalAlignment="Top" Command="{Binding SaveJsonCommand}"   IsEnabled="{Binding EnableButtonSaveJson,UpdateSourceTrigger=PropertyChanged ,  Converter={StaticResource EnableButtonConvert}}"/>
         <Button Grid.Column="0" Grid.Row="4"  Name="OpenTxT" Content="Відкрити файл" Width="100" Height="30"  Background="SkyBlue"  FontWeight="Medium" VerticalAlignment="Top"  Command="{Binding OpenJsonCommand}" Margin="5,40,5,0" Grid.RowSpan="2"/>
       
     </Grid>
