--- a/MVVM/Styles/StyleButton.xaml
+++ b/MVVM/Styles/StyleButton.xaml
@@ -4,7 +4,6 @@
         <Setter Property="Background" Value="LightGray"/>
         <Setter Property="Foreground" Value="Black"/>
         <Setter Property="Width" Value="90"/>
-        <!--Width="90" Height="20"    FontWeight="Medium" VerticalAlignment="Top" HorizontalAlignment="Center" />-->
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="Height" Value="20"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
@@ -12,6 +11,7 @@
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="FontSize" Value="12"/> 
         <Setter Property="Template">
+            
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border Background="{TemplateBinding Background}">
@@ -26,7 +26,12 @@
 
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="red"/>
-                <!--<Setter Property="Foreground" Value="Black"/>-->
+                
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="Gray"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Opacity" Value="0.3"/> 
             </Trigger>
         </Style.Triggers>
 
